src/webapp/Angor.Client/wwwroot/assets/css/app.css
/* ... */
.dark .border-dark, .dark .btn-link.text-white {
    border-color: var(--angor-dark) !important;
}

.dark g[fill] {
    fill: var(--angor-primary) !important;
}

.btn-content {
    font-size: 16px !important;
}

.dark .card-body {
    color: #e3f8fc !important;
}

.card-header-img {
    height: 250px;
    overflow: hidden;
}

.card-header-img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.line-clamp-3 {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    -webkit-line-clamp: 3;
}

.modal-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000000;
    -webkit-backdrop-filter: blur(3px);
    backdrop-filter: blur(3px);
    overflow: hidden;
}

.modal-wrapper-top {
    z-index: 1000001;
}

body.modal-open {
    overflow: hidden;
    padding-right: var(--scrollbar-width, 0px);
}

.card-img-top {
    height: 230px;
    object-fit: cover;
}

.card-img-top-view {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    position: absolute;
    top: 0;
    left: 0;
}

.banner-container {
    height: 200px;
    overflow: hidden;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    position: relative;
}

.alert-message {
    margin: auto;
    bottom: 20px;
}

.dark .menu-text, .dark .menu-text.active, .menu-text, .menu-text.active {
    color: var(--angor-primary) !important;
}

.navbar-main {
    background: #f5fdff !important;
}

.dark .navbar-main {
    background: #083b46 !important;
}

.angor-alert-info {
    background-color: #1f5d6a40 !important;
    color: #fff;
}

.dark .angor-alert-info {
    background-color: var(--angor-secondary) !important;
}

.project-wrapper {
    margin-left: -.5rem;
    margin-right: -.5rem;
}

.btn-view {
    font-weight: 400;
    border-radius: 7px;
}

.btn-view:hover {
    background-color: rgba(199, 199, 199, .2);
    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -1px rgba(0, 0, 0, .06);
}

.blur-shadow-image img {
    transition: transform .3s ease, box-shadow .3s ease;
}

.blur-shadow-image:hover img {
    transform: scale(1.05);
    box-shadow: 0 4px 8px rgba(0, 0, 0, .3);
}

.rotate-icon {
    display: inline-block;
    animation: rotate 2s linear infinite;
}

input[type=checkbox]+label {
    display: flex;
    cursor: pointer;
    align-items: center;
}

input[type=checkbox] {
    display: none;
}

input[type=checkbox]+label:before {
    content: "✔";
    border: .1em solid var(--angor-secondary);
    border-radius: .3em;
    display: inline-block;
    width: 2em;
    height: 2em;
    padding-left: .5em;
    padding-bottom: .2em;
    padding-top: .2em;
    margin-right: .4em;
    vertical-align: bottom;
    color: transparent;
    transition: .2s;
}

input[type=checkbox]+label:active:before {
    transform: scale(0);
}

input[type=checkbox]:checked+label:before {
    background-color: var(--angor-secondary);
    border-color: var(--angor-secondary);
    color: #fff;
}

input[type=checkbox]:disabled+label:before {
    transform: scale(1);
    border-color: #aaa;
}

input[type=checkbox]:checked:disabled+label:before {
    transform: scale(1);
    background-color: #bfb;
    border-color: #bfb;
}

.card.active .card-body {
    animation: heartbeat 1.5s ease-in-out 1;
}

.main-logo, .navbar-brand {
    display: inline-block;
    cursor: pointer;
    position: relative;
}

.main-logo .icon, .navbar-brand .icon {
    stroke-dasharray: 1000;
    stroke-dashoffset: 0;
    transition: stroke-dashoffset 2s ease-in-out;
}

.main-logo:hover .icon, .navbar-brand:hover .icon {
    animation: drawLogo 2s forwards, zoomInOut 2s forwards;
}

.main-logo .icon {
    animation: none;
    transform-origin: center;
}

.banner-container-list {
    position: relative;
    height: 220px;
    overflow: hidden;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

.banner-image {
    width: 100%;
    height: 100%;
    display: block;
    object-fit: cover;
}

.profile-container, .profile-image {
    border-radius: 50%;
    position: absolute;
}

.profile-container {
    bottom: 10px;
    left: 10px;
    width: 80px;
    height: 80px;
    overflow: visible;
    border: 5px solid #fff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, .2);
}

.profile-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    bottom: 0;
    left: 0;
}

.profile-image-view {
    width: 120px;
    height: 120px;
    object-fit: cover;
    object-position: center;
    border: 4px solid white;
    position: absolute;
    bottom: -60px;
    left: 30px;
    z-index: 2;
}

.dark .profile-image-view {
    border-color: #1a1d29;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

h1:focus {
    outline: 0;
}

h1:focus-visible {
    outline: 0;
}

a, img {
    -webkit-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
}

.disabled {
    pointer-events: none;
    opacity: .5;
}

.g-4 {
    --angor-gutter-x: 1.5rem;
    --angor-gutter-y: 1.5rem;
    margin-right: calc(var(--angor-gutter-x)/-2);
    margin-left: calc(var(--angor-gutter-x)/-2);
}

.g-4>.col, .g-4>[class^=col-] {
    padding-right: calc(var(--angor-gutter-x)/2);
    padding-left: calc(var(--angor-gutter-x)/2);
}

.g-2 {
    --angor-gutter-x: 1.5rem;
    --angor-gutter-y: 1.5rem;
    margin-right: calc(var(--angor-gutter-x)/-4);
    margin-left: calc(var(--angor-gutter-x)/-4);
}

.g-2>.col, .g-2>[class^=col-] {
    padding-right: calc(var(--angor-gutter-x)/4);
    padding-left: calc(var(--angor-gutter-x)/4);
}

.min-width-zero {
    min-width: 0;
}

.font-custom {
    font-size: 0.8rem;
    font-weight: 500;
}

input.form-control, textarea.form-control {
    border-radius: 8px;
    font-size: 16px;
    transition: all .3s ease;
}

input.form-control:focus, textarea.form-control:focus {
    box-shadow: 0 0 5px rgba(0, 123, 255, .5);
    outline: 0;
}
/* ... */

